opam-version: "2.0"
homepage:     "https://github.com/mirleft/ocaml-tls"
dev-repo:     "git+https://github.com/mirleft/ocaml-tls.git"
bug-reports:  "https://github.com/mirleft/ocaml-tls/issues"
doc:          "https://mirleft.github.io/ocaml-tls/doc"
author:       ["David Kaloper <david@numm.org>" "Hannes Mehnert <hannes@mehnert.org>" "Eric Ebinger <github@eric.theebingers.com>" "Calascibetta Romain <romain.calascibetta@gmail.com>"]
maintainer:   ["Hannes Mehnert <hannes@mehnert.org>" "David Kaloper <david@numm.org>"]
license:      "BSD-2-Clause"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.0"}
  "tls" {= version}
  "x509" {>= "0.14.0"}
  "ptime" {>= "0.8.1"}
  "eio" {>= "0.2"}
  "mirage-crypto-rng-eio"
]

pin-depends:[
  ["mirage-crypto-rng-eio.dev" "git+https://github.com/bikallem/mirage-crypto.git#eio"]
]

tags: [ "org:mirage"]
synopsis: "Transport Layer Security purely in OCaml, Async layer"
description: """
Tls-async provides Async-friendly tls bindings
"""
